--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,21 @@
 # Site settings
-name: Timothy Olaleke
-title: Timothy Olaleke | Software Engineer
-description: Timothy Olaleke is a highly motivated software developer with solid understanding of software development best practices. I'm also an open source hobbyist & a community mentor keen to change-makers.👨‍
-url: https://timtech4u.github.io
+name: Joseph Oladokun
+title: Joseph Oladokun | Data Scientist
+description: Joseph Oladokun is a solution-minded data scientist with solid understanding of end-to-end data science best practices and loves to crunch data and analyse stuff, I'm also an open source hobbyist & a community mentor focused on making impacts.👨‍
+url: https://godskid89.github.io
 baseurl: ""
-email: timothyolaleke@gmail.com
-keywords: timothy olaleke, engineer, software engineer, computer science, timtech4u
+email: oladokunjoseph2@gmail.com
+keywords: joseph oladokun, data scientist, machine learning, artificial intelligence, godskid89
 cover: #
 logo: #
 resume: #
 social:
   - title: linkedin
-    url: https://www.linkedin.com/in/timtech4u
+    url: https://www.linkedin.com/in/joseph-oladokun-861283111/
   - title: twitter
-    url: https://twitter.com/fullstackgcp
+    url: https://twitter.com/Godskid_CFC
   - title: github
-    url: https://github.com/timtech4u
+    url: https://github.com/godskid89
 
 # Build settings
 markdown: kramdown
