--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,6 @@
 - company: Cars45
   url: https://cars45.com/
-  time: Feb 2029 - To Date
+  time: Feb 2020 - To Date
   position: Data Scientist
 
 - company: eHealth Africa
@@ -11,14 +11,14 @@
 - company: Prifina
   url: https://www.prifina.com/
   time: Sep 2019 - Dec 2019
-  position: Data Science Consultant
+  position: Data Science Consultant (Contract)
 
 - company: Beyond FUTA (Now Evolve)
   url: https://web.facebook.com/officialBeyondFUTA/?_rdc=1&_rdr
   time: Mar 2017 - Mar 2018
   position: Data Analyst
   
-- company: Associaltion of African Universities
+- company: Association of African Universities
   url: https://www.aau.org/
   time: Sep 2017 - Nov 2017
   position: Social Media Manager (Contract)
