--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1,9 +1,9 @@
-- title: European R Users Meeting 2020
+- title: European R Users Meeting 2020, Milan, Italy
   url: https://2020.erum.io/
   date: June 2020
   role: Attendee
 
-- title: DevFest Kano
+- title: Google DevFest Kano, Nigeria
   url: https://sessionize.com/app/speaker/event/details/2432
   date: October, 2019
   role: Speaker
