--- a/_data/other-projects.yml
+++ b/_data/other-projects.yml
@@ -1,10 +1,10 @@
-- name: Rainfall Prediction Model
-  url: https://github.com/Godskid89/rainfall-prediction-using-ARIMA-ANN-LSTM/blob/master/Rainfall%20(4).ipynb
-  code: https://github.com/Godskid89/rainfall-prediction-using-ARIMA-ANN-LSTM/blob/master/Rainfall%20(4).ipynb
-  description: An Experimentation of ARIMA, ANN and LSTM to predict rainfall in Scotland using Satellite precipatation data and station rainfall observation
+- name: Customer Behaviour Prediction Model
+  url: https://github.com/Godskid89/Predicting-online-customer-behaviour/blob/master/Joseph_Code_File.R
+  code: https://github.com/Godskid89/Predicting-online-customer-behaviour/blob/master/Joseph_Code_File.R
+  description: A model that predicts customer behaviour on e-commerce platform
   used:
-  - thing: Python
-  - thing: Machine & Deep learning
+  - thing: R
+  - thing: Machine learning
 
 - name: Customer Segmentation
   url: https://github.com/Godskid89/customer_segmentation/blob/master/Customer_segmentation.ipynb
@@ -12,10 +12,20 @@
   description: A customer segmentation analysis
   used:
   - thing: Python
+  - thing: clustering
 
-- name: African Crisis Analysis
-  url: https://github.com/Godskid89/African_crisis_analysis
-  code: https://github.com/Godskid89/African_crisis_analysis
-  description: Analysis of crisis that has engulf Africa over the years
+- name: Google Stock Price Trend Prediction Model
+  url: https://github.com/Godskid89/Using-RNN_LSTM_to-Predict-the-future-of-Google-Stock-Price/blob/master/rnn.py
+  code: https://github.com/Godskid89/Using-RNN_LSTM_to-Predict-the-future-of-Google-Stock-Price/blob/master/rnn.py
+  description: A model that detect trends of Google Stock Price using Recurrent Neural Network
   used:
   - thing: Python
+  - thing: Deep learning
+
+- name: Loan Defaulters Prediction Model
+  url: https://github.com/Godskid89/Loan-Default-Prediction-Using-Support-Vector-Machine/blob/master/SVM_loan.Rmd
+  code: https://github.com/Godskid89/Loan-Default-Prediction-Using-Support-Vector-Machine/blob/master/SVM_loan.Rmd
+  description: A model that predict loan defaulters with probability using support vector machine
+  used:
+  - thing: R
+  - thing: Machine learning
