--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: Joseph Oladokun
 title: Joseph Oladokun | Data Scientist
 description: Joseph Oladokun is a solution-minded data scientist with solid understanding of end-to-end data science best practices and loves to crunch data and analyse stuff, I'm also an open source hobbyist & a community mentor focused on making impacts.👨‍
-url: http://josepholadokun.com.ng/
+url: https://godskid89.github.io
 baseurl: ""
 email: oladokunjoseph2@gmail.com
 keywords: joseph oladokun, data scientist, machine learning, artificial intelligence, godskid89
