--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -21,7 +21,7 @@
 - company: Association of African Universities
   url: https://www.aau.org/
   time: Sep 2017 - Nov 2017
-  position: Social Media Manager (Contract)
+  position: Social Media Consultant (Contract)
 
 - company: Federal College of Animal Health and Production, Ibadan
   url: https://sites.google.com/a/fcahptib.edu.ng/fcahptib-website/About-FCAHPT
