--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,4 +1,4 @@
-- company: Cars45
+- company: Autochek Africa
   url: https://autochek.africa/
   time: Oct 2020 - Present
   position: Data Scientist
