--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,11 +1,11 @@
-- company: Autochek Africa
-  url: https://autochek.africa/
-  time: Oct 2020 - Present
-  position: Data Scientist
+#- company: Autochek Africa
+#  url: https://autochek.africa/
+#  time: Oct 2020 - Present
+#  position: Data Scientist
 
 - company: Cars45
   url: https://cars45.com/
-  time: Feb 2020 - Sep 2020
+  time: Feb 2020 - Present
   position: Data Scientist
 
 - company: eHealth Africa
