add autochek experience

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,7 @@
-#- company: Autochek Africa
-#  url: https://autochek.africa/
-#  time: Oct 2020 - Present
-#  position: Data Scientist
+- company: Autochek Africa
+  url: https://autochek.africa/
+  time: Oct 2020 - Present
+  position: Data Scientist
 
 - company: Cars45
   url: https://cars45.com/
