--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -5,7 +5,7 @@
 
 - company: Cars45
   url: https://cars45.com/
-  time: Feb 2020 - Present
+  time: Feb 2020 - Sep 2020
   position: Data Scientist
 
 - company: eHealth Africa
