update expereince and skills

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,12 @@
+- company: Bored Pandas
+  url: https://www.boredpanda.com/
+  time: July 2021 - Present
+  position: Senior Data Scientist
+
 - company: Autochek Africa
   url: https://autochek.africa/
-  time: Oct 2020 - Present
-  position: Data Scientist
+  time: Oct 2020 - Aug 2021
+  position: Senior Data Scientist
 
 - company: Cars45
   url: https://cars45.com/
