--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,21 +1,31 @@
+- company: Helium Health
+  url: https://heliumhealth.com/
+  time: Mar 2022 - July 2023
+  position: Data Scientist (Consultant)
+
+- company: RataFX
+  url: https://www.ratafx.com/
+  time: Mar 2022 - July 2023
+  position: Data Scientist
+
+- company: SpendJuice
+  url: https://www.juicyway.com/
+  time: Aug 2021 - March 2023
+  position: Data Scientist
+
 - company: Bored Pandas
   url: https://www.boredpanda.com/
-  time: July 2021 - Present
-  position: Senior Data Scientist
+  time: July 2021 - Dec 2022
+  position: Data Scientist (Consultant)
 
 - company: Autochek Africa
   url: https://autochek.africa/
   time: Oct 2020 - Aug 2021
-  position: Senior Data Scientist
-
-- company: Cars45
-  url: https://cars45.com/
-  time: Feb 2020 - Sep 2020
   position: Data Scientist
 
 - company: eHealth Africa
   url: http://ehealthafrica.org
-  time: Sep 2018 - Jan 2020
+  time: Aug 2018 - Sep 2020
   position: Data Scientist
 
 - company: Prifina
